<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_baseline_photo_24"
        android:title="@string/nav_timeline" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:title="@string/nav_albums" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/nav_places" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/nav_people" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings" />

</menu>